--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-{ "dependencies": { "axios": "^1.6.7", "canvas": "^2.11.2", "express": "^4.18.3" } }
+{
+  "dependencies": {
+    "axios": "^1.6.7",
+    "canvas": "^2.11.2",
+    "express": "^4.18.3"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "build": ""
+  },
+  "name": "pi-api",
+  "description": "Image generator for rapsberri pi",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
+}
