--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "^4.18.3"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "build": ""
   },
   "name": "pi-api",
