use tailwind css

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/register": "^7.23.7",
-    "@flydotio/dockerfile": "^0.5.2"
+    "@flydotio/dockerfile": "^0.5.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   },
   "author": "",
   "license": "ISC"
