--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@vercel/og": "latest",
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "groq-sdk": "^0.19.0",
     "react": "^19.1.0",
     "satori": "latest",
     "sharp": "latest"
