--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,33 @@
-/.git
-/node_modules
-.dockerignore
+# Node modules and logs
+node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Bun specific
+bun.lockb
+.bun
+.bun.lockb
+
+# Git and environment files
+.git
+.gitignore
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor directories and files
+.idea
+.vscode
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+.dockerignore
 Dockerfile
 fly.toml
