--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "axios": "^1.6.7",
     "dotenv": "^16.5.0",
     "groq-sdk": "^0.19.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "satori": "latest",
     "sharp": "latest"
   },
   "scripts": {
     "dev": "bun --watch app.js",
     "start": "bun app.js",
-    "build": "bun install"
+    "build": "bun install",
+    "deploy:fly": "fly deploy"
   },
   "name": "pi-api",
   "description": "Image generator OS",
